### Changes

- Improvements to dynamic draw distance stability